# pytest-tutorial

./: .gitignore  README.md  pyproject.toml
Tutorial/: python_testing.ipynb
Tutorials/: pandas_tutorial.ipynb
src/: sine.py
tests/: e2e_test.py  unit_test.py
